--- a/views/listImage.pug
+++ b/views/listImage.pug
@@ -8,6 +8,8 @@ html(lang="en")
     body 
      a(href="/",style="font-size: 2rem") Home 
      div(style="display: grid; grid-template-columns: repeat(4,1fr);gap: 3rem; margin-top:3rem" )
-       each image in images 
-        img(style="width: 100%; height: 20rem;object-fit: cover; " src=`${image.avatar}`, alt=`${image.path}`)
-     
+       each image in images
+         div
+           img(style="width: 100%; height: 20rem;object-fit: cover; " src=`${image.url}`, alt=`${image.path}`)
+           form(action=`deleteImages/${image._id}`, method="post")
+            button Delete 
