--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -34,30 +34,124 @@ img {
   display: block;
   max-width: 100%;
 }
-
-.container {
+body {
+  padding-bottom: 20rem;
+}
+.header {
+  background-color: #6631f1;
   padding: 2rem;
-  width: 100%;
-  height: 10rem;
-  background-color: rgb(32, 61, 227);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user {
   display: flex;
   align-items: center;
 }
 
-.container a {
-  color: white;
-  margin-right: 3rem;
-  transition: all 1s linear;
-  position: relative;
+.user .avatar {
+  width: 6rem;
+  height: 6rem;
+}
+.user .avatar img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  object-fit: cover;
 }
 
-.container a:hover::before {
-  content: "";
+.name_user {
+  margin-left: 2rem;
+  color: white;
+}
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+.menu a {
+  color: white;
+  margin: 0 2rem;
+}
+.content {
+  margin-top: 3rem;
+  padding: 0 4rem;
+}
+
+.line {
   width: 100%;
-  height: 5px;
-  background-color: red;
+  height: 1px;
+  background-color: black;
+}
+
+.container-post {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+}
+.container-post .post {
+  position: relative;
+  width: 100%;
+  height: 30rem;
+  background-position: center;
+}
+
+.post img {
+  width: 100%;
+  height: 100%;
+}
+
+.post button {
   position: absolute;
-  z-index: 10;
-  bottom: -1rem;
+  bottom: 3rem;
+  right: 3rem;
+  padding: 1rem;
+  color: white;
+  background-color: rgb(209, 49, 31);
+  border: none;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.post .desc {
+  color: white;
+  margin-top: 2rem;
+}
+
+.post .title-post {
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+}
+.post .content-text {
+  position: absolute;
+  top: 8rem;
+  left: 3rem;
+  margin-top: 2rem;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
   left: 0;
+  margin-top: 5rem;
+  width: 100%;
+  height: 8rem;
+  background-color: #6631f1;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+footer i {
+  color: white;
+  font-size: 2.5rem;
+  cursor: pointer;
+  margin-left: 2rem;
+}
+
+footer .contact {
+  color: white;
 }
