--- a/views/home.pug
+++ b/views/home.pug
@@ -4,10 +4,32 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=, initial-scale=1.0")
+        link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css')
         link(rel="stylesheet", href="/styles/home.css")
         title Document
     body 
-     div(class="container")  
-      a(href="/upload") Upload
-      br
-      a(href="/upload/show") List Images 
+      header(class="header")
+       div(class="user")
+         div(class="avatar")
+          img(src="https://images.unsplash.com/photo-1666950213034-fdff64cecf6a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60", alt="") 
+         div(class="name_user") Hey, User 
+       div(class="menu")
+         a(href="/upload") Upload
+      div(class="content")
+        div(class="line") 
+        div(class="container-post")
+          each image in images
+            div(class="post")      
+              img(src=`${image.url}`, alt="")   
+              form(action=`upload/deleteImages/${image._id}`, method="post")          
+                button Delete
+      footer
+        div(class="contact") Contact me:
+        a(href="https://www.facebook.com/bibi.buon.982/" target='_black') 
+         i.fab.fa-facebook
+        a(href="https://www.instagram.com/nguyen.trung.hieu.2511/" target='_black')
+         i.fab.fa-instagram  
+        a(href="https://github.com/nguyenhieubp" target='_black') 
+         i.fab.fa-github
+        
+            
